padding and fixing linux spacing

--- a/style.css
+++ b/style.css
@@ -48,10 +48,10 @@
 }
 
 /* spacing on all sections */
-/* #about, #skills, #portfolio, #contact {
+#about, #skills, #portfolio, #contact {
     margin-top: 4rem;
     padding-top: 4rem;
-} */
+}
 #contact {
     padding-bottom: 4rem;
     
